design fix for like icon on small screen, fix edit profile card layout

--- a/src/app/author/author-profile/author-profile.component.scss
+++ b/src/app/author/author-profile/author-profile.component.scss
@@ -179,6 +179,12 @@
      }
    }
 
+   .accountEditCard {
+    border-radius: 20px;
+    margin: 0px 8px 0rem 8px;
+    padding: 2rem;
+  }
+
    .card .blogCards {
     width: 100%;
     align-self: center;
