--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -154,13 +154,13 @@
     padding-right: 4px;
   }
   .material-icons {
-   margin: 0px 4px 0px 0px;
-   font-size: 40px;
+   margin: 0px 2px 8px 0px;
+   font-size: 30px;
   }
   .likeIconContainer {
     position: absolute;
-    right: 1rem;
-    bottom: 8px;
+    right: 4px;
+    bottom: 10px;
   }
   .buttonWrapper {
     display: flex;
